src/main/java/com/example/NYA_reservation/controller/error/UnauthorizedAccessException.java
package com.example.NYA_reservation.controller.error;

public class UnauthorizedAccessException extends RuntimeException {
    public UnauthorizedAccessException(String message) {
        super(message);
    }
}
